# hyprfire

./: README.md  meson.build
metadata/: hyprfire.xml  meson.build  tiling.xml
src/: meson.build
src/simple_tile_2/: tile-dragging.hpp  tile-ipc.hpp  tile-plugin.cpp  tile-wset.hpp  tree-controller.cpp  tree-controller.hpp  tree.cpp  tree.hpp
src/utils/: crossfade_2.cpp  crossfade_2.hpp
